--- a/quiz/package.json
+++ b/quiz/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "vue": "^2.6.12"
   },
   "devDependencies": {
@@ -35,7 +37,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-console":0
+      "no-console": 0
     }
   },
   "parserOptions": {
